# bam-inclusify

./: .dockerignore  .gitattributes  .gitignore  LICENSE  Procfile  README.md  config-overrides.js  manifest.xml  package.json  requirements.txt
data/: .gitignore  LICENSE  README.ipynb  README.md  copy_files.py  copy_grammar_files.py  create_grammar.py  create_grammars.py  create_illness_rules.py  create_unified_dic.py  create_unified_list.py  create_xml.py  disability_rules.xml  gender_config.py  grammar_custom.xml  grammar_openminded.xml  helpers.py  helpers_csv.py  illness_rules.csv  main.ipynb  paths.py  prepare_languagetool.py  pyproject.toml  requirements.in  requirements.txt  shared.py  test.py  unified.csv  unified_pl.csv  unified_sg.csv  xmlify.py
data/custom_rules/: gender.xml
data/dereko/: LICENSE  dereko_unified.csv  dereko_unified_checked.csv  dereko_unified_pl.csv  dereko_unified_sg.csv  internal-i.csv  internal-i.txt  interpunct.txt  main.ipynb  slash.txt
data/geschicktgendern/: LICENSE  geschicktgendern.csv  geschicktgendern_normalized.csv  geschicktgendern_raw.csv  geschicktgendern_raw.xlsx  geschicktgendern_sg.csv  main.ipynb  notes.txt
data/language-template/: LICENSE
data/openthesaurus/: LICENSE  main.ipynb  openthesaurus_persons.csv  openthesaurus_persons_male_sg.csv  queries.sql
data/retext-equality/: LICENSE  added.txt  create_illness_rules.py  custom_rules_disability.xml  illness_rules.xml  main.ipynb
data/vienna_catalog/: main.ipynb  vienna_catalog.csv  vienna_catalog_pl.csv  vienna_catalog_sg.csv
data/wordlists/: LICENSE  (+4 more)
(+197 files in other folders)
